# mytravels_bot

./: .gitignore  pyproject.toml  test.js
accounts_app/migrations/: 0001_initial.py
adv_app/: admin.py  apps.py  models.py
adv_app/migrations/: 0001_initial.py  0002_alter_advphoto_options.py  0003_adv_target.py  0004_alter_advphoto_url.py
api/: __init__.py  aviasales_api.py  robokassa_api.py
core/: settings.py  urls.py
payments_app/: admin.py  apps.py  models.py  urls.py  views.py
payments_app/migrations/: 0001_initial.py
tgbot_app/: admin.py  apps.py  loader.py  models.py
tgbot_app/api/: __init__.py  exchangerate_api.py  sputnik_api.py
tgbot_app/handlers/: __init__.py
tgbot_app/keyboards/: __init__.py  adv_keyboards.py  avia_keyboards.py  currency_keyboards.py  excursion_keyboards.py  pay_keyboards.py
tgbot_app/middlewares/: __init__.py  check_profile.py  check_subscribtion.py
tgbot_app/migrations/: 0001_initial.py  0002_profile_is_admin.py  0003_country_city.py  0004_alter_city_options_alter_country_options.py  0005_airport.py  0006_airline.py  0007_alter_city_options_alter_country_options_and_more.py  0008_excursioncountry_rename_city_aviacity_and_more.py  0009_alter_excursioncity_options_and_more.py  0010_flightsubscription_is_direct.py  0011_rename_arrival_date_flightsubscription_return_date.py  0012_profile_end_subscription_profile_is_subscriber_and_more.py
tgbot_app/shedulers/: __init__.py  avia_subscribe.py  check_subscription.py  mailing.py
tgbot_app/states/: __init__.py  avia_state.py  excursion_state.py
tgbot_app/utils/: __init__.py  (+7 more)
(+11 files in other folders)
